<package>
  <name>rqt_plot</name>
  <version>0.2.1</version>
  <description>rqt_plot provides a GUI plugin visualizing numeric values in a 2D plot using different plotting backends.</description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_plot</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>python-matplotlib</run_depend>
  <run_depend>python-qt-bindings-qwt5</run_depend>
  <run_depend>python-rospkg</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rosgraph</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
