<package>
  <name>rqt_pose_view</name>
  <version>0.1.7</version>
  <description>rqt_pose_view provides a GUI plugin for visualizing 3D poses.</description>
  <maintainer email='scholz@sim.tu-darmstadt.de'>Dorian Scholz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_pose_view</url>
  <url type="repository">https://github.com/ros-visualization/rqt</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>rostopic</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>python-opengl</build_depend>
  <build_depend>python-qt-bindings-gl</build_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>python-opengl</run_depend>
  <run_depend>python-qt-bindings-gl</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
