<package>
  <name>rqt_publisher</name>
  <description>rqt_publisher provides a GUI plugin for publishing arbitrary messages with fixed or computed field values.</description>
  <maintainer email='scholz@sim.tu-darmstadt.de'>Dorian Scholz</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_publisher</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt/issues</url>

  <author>Dorian Scholz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rqt_gui</build_depend>
  <build_depend>rqt_gui_py</build_depend>
  <build_depend>rqt_py_common</build_depend>
  <build_depend>qt_gui_py_common</build_depend>
  <build_depend>rosmsg</build_depend>
  <run_depend>rqt_gui</run_depend>
  <run_depend>rqt_gui_py</run_depend>
  <run_depend>rqt_py_common</run_depend>
  <run_depend>qt_gui_py_common</run_depend>
  <run_depend>rosmsg</run_depend>

  <export>
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
