<package format="3">
  <name>rqt_py_common</name>
  <version>0.5.0</version>
  <description>
    rqt_py_common provides common functionality for rqt plugins written in Python.
    Despite no plugin is provided, this package is part of the rqt_common_plugins
    repository to keep refactoring generic functionality from these common plugins
    into this package as easy as possible.

    Functionality included in this package should cover generic ROS concepts and
    should not introduce any special dependencies beside "ros_base".
  </description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org/wiki/rqt_py_common</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>
  <author>Dorian Scholz</author>
  <author>Isaac Saito</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- <depend>genmsg</depend> -->
  <depend>std_msgs</depend>
  <depend>qtbase5-dev</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <!-- <exec_depend>genpy</exec_depend> -->
  <exec_depend version_gte="0.3.4">python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>
  <!-- <exec_depend>roslib</exec_depend> -->
  <exec_depend>rclpy</exec_depend>
  <!-- <exec_depend>rostopic</exec_depend> -->

  <!-- 3/11/2013 depending on actionlib & rosbag is only temporary;
  rosaction.py needs it. In the future this exec_depend will be removed when
  rosaction gets moved to actionlib. -->
  <!-- <exec_depend>actionlib</exec_depend> -->
  <!-- <exec_depend>rosbag</exec_depend> -->
  <member_of_group>rosidl_interface_packages</member_of_group>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
