<package format="3">
  <name>rqt_py_common</name>
  <version>1.1.1</version>
  <description>
    rqt_py_common provides common functionality for rqt plugins written in Python.
    Despite no plugin is provided, this package is part of the rqt_common_plugins
    repository to keep refactoring generic functionality from these common plugins
    into this package as easy as possible.

    Functionality included in this package should cover generic ROS concepts and
    should not introduce any special dependencies beside "ros_base".
  </description>
  <maintainer email="scholz@sim.tu-darmstadt.de">Dorian Scholz</maintainer>
  <maintainer email="michael.jeronimo@openrobotics.org">Michael Jeronimo</maintainer>
  <license>BSD</license>
  <url type="website">http://ros.org/wiki/rqt_py_common</url>
  <url type="repository">https://github.com/ros-visualization/rqt_common_plugins</url>
  <url type="bugtracker">https://github.com/ros-visualization/rqt_common_plugins/issues</url>
  <author>Dorian Scholz</author>
  <author>Isaac Saito</author>
  <author>Dirk Thomas</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>qtbase5-dev</depend>
  <depend>rclpy</depend>

  <exec_depend version_gte="0.3.4">python_qt_binding</exec_depend>
  <exec_depend>qt_gui</exec_depend>

  <test_depend>ament_cmake_pytest</test_depend>
  <test_depend>python_cmake_module</test_depend>
  <test_depend>rosidl_default_generators</test_depend>
  <test_depend>rosidl_default_runtime</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <architecture_independent/>
  </export>
</package>
